Change customers schema add password feild

--- a/app/views/customers/_form.html.erb
+++ b/app/views/customers/_form.html.erb
@@ -29,7 +29,12 @@
   <div class="field">
     <%= form.label :phno %>
     <%= form.number_field :phno %>
-  </div>
+  </div> 
+
+  <div class="field">
+    <%= form.label :password %>
+    <%= form.text_field :password %>
+  </div> 
 
   <div class="actions">
     <%= form.submit %>
